ver 0.19 (not yet released)
* protocol
  - new commands "addtagid", "cleartagid"
  - "lsinfo" and "readcomments" allowed for remote files
  - "listneighbors" lists file servers on the local network
  - "playlistadd" supports file:///
* database
  - proxy: forward "idle" events
  - proxy: copy "Last-Modified" from remote directories
  - upnp: new plugin
* playlist
  - soundcloud: use https instead of http
  - soundcloud: add default API key
* archive
  - read tags from songs in an archive
* input
  - alsa: new input plugin
  - nfs: new input plugin
  - smbclient: new input plugin
* filter
  - volume: improved software volume dithering
* encoder:
  - shine: new encoder plugin
* threads:
  - the update thread runs at "idle" priority
  - the output thread runs at "real-time" priority
  - increase kernel timer slack on Linux
  - name each thread (for debugging)
* new resampler option using libsoxr
* allow playlist directory without music directory

ver 0.18.8 (2014/02/07)
* decoder
  - ffmpeg: support libav v10_alpha1
* encoder
  - vorbis: fix linker failure
* output
  - roar: documentation
* more robust Icy-Metadata parser
* fix Solaris build failure

ver 0.18.7 (2014/01/13)
* playlist
  - pls: fix crash after parser error
  - soundcloud: fix build failure with libyajl 2.0.1
* decoder
  - faad: fix memory leak
  - mpcdec: reject libmpcdec SV7 in configure script
* daemon: don't initialize supplementary groups when already running
  as the configured user

ver 0.18.6 (2013/12/24)
* input
  - cdio_paranoia: support libcdio-paranoia 0.90
* tags
  - riff: recognize upper-case "ID3" chunk name
* decoder
  - ffmpeg: use relative timestamps
* output
  - openal: fix build failure on Mac OS X
  - osx: fix build failure
* mixer
  - alsa: fix build failure with uClibc
* fix replay gain during cross-fade
* accept files without metadata

ver 0.18.5 (2013/11/23)
* configuration
  - fix crash when db_file is configured without music_directory